# opencli-rs

./: Cargo.toml
adapters/apple-podcasts/: episodes.yaml  search.yaml  top.yaml
adapters/arxiv/: paper.yaml  search.yaml
adapters/bbc/: news.yaml
adapters/bilibili/: download.yaml  user-videos.yaml
adapters/google/: news.yaml  search.yaml  suggest.yaml  trends.yaml
adapters/weibo/: search.yaml
adapters/weixin/: download.yaml
adapters/wikipedia/: random.yaml  search.yaml  summary.yaml  trending.yaml
crates/opencli-rs-ai/: Cargo.toml
crates/opencli-rs-browser/: Cargo.toml
crates/opencli-rs-cli/: Cargo.toml
crates/opencli-rs-cli/src/: main.rs
crates/opencli-rs-core/: Cargo.toml
crates/opencli-rs-discovery/: Cargo.toml
crates/opencli-rs-external/: Cargo.toml
crates/opencli-rs-output/: Cargo.toml
crates/opencli-rs-pipeline/: Cargo.toml
crates/opencli-rs-pipeline/src/steps/: browser.rs  download.rs  intercept.rs  tap.rs
